--- a/packages/leaa-dashboard/src/components/SubmitBar/style.module.less
+++ b/packages/leaa-dashboard/src/components/SubmitBar/style.module.less
@@ -25,7 +25,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  margin-left: 200px;
   transition: all 0.3s;
   z-index: 99;
 
@@ -39,6 +38,18 @@
 }
 
 :global {
+  .g-full-layout-wrapper--mb {
+    .g-wrapper--full {
+      margin-left: 0;
+    }
+  }
+
+  .g-full-layout-wrapper--pc {
+    .g-wrapper--full {
+      margin-left: 200px;
+    }
+  }
+
   .siderbar-collapsed {
     :local {
       .wrapper--full {
