--- a/packages/leaa-dashboard/src/layouts/MasterLayout/_components/SidebarTarget/style.module.less
+++ b/packages/leaa-dashboard/src/layouts/MasterLayout/_components/SidebarTarget/style.module.less
@@ -1,6 +1,6 @@
 @import '~@leaa/dashboard/src/styles/variables.less';
 
-.wrapper {
+.sidebar-target-wrapper {
   position: relative;
 
   button {
@@ -14,7 +14,7 @@
   }
 }
 
-.wrapper--collapsed {
+.sidebar-target-wrapper--collapsed {
   button {
     color: #999 !important;
   }
